--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conversor de Taxa</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
+    <link rel="stylesheet" href="./css/footer.css">
 </head>
 <body>
-    <div id="titulo">Conversor de Taxa</div>
-
+    <header>
+        <div id="titulo">Conversor de Taxa</div>
+    </header>
+    
     <div class="container">
         <label for="taxa">Digite a taxa (%):</label>
         <input type="number" id="taxa" placeholder="Ex: 10">
@@ -42,5 +46,10 @@
     </div>
 
     <script src="./script.js"></script>
+
+    <footer><p>
+        Desenvolvido por Guilherme Cardona Krüger Moreira
+    </p></footer>
+    
 </body>
 </html>
